--- a/logstash/templates/30-elasticsearch-output.conf.erb
+++ b/logstash/templates/30-elasticsearch-output.conf.erb
@@ -1,5 +1,9 @@
 output {
   elasticsearch {
-    hosts => ["  <%= @elasticsearchip  %> :9200"]
+    hosts => ["<%= @elasticsearchip  %>:9200"]
+     sniffing => true
+    manage_template => false
+    index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
+    document_type => "%{[@metadata][type]}"
   }
 }
