--- a/elasticsearch/templates/elasticsearch.yml.erb
+++ b/elasticsearch/templates/elasticsearch.yml.erb
@@ -56,7 +56,7 @@
 #
 # Set a custom port for HTTP:
 #
-#http.port: 9200
+ http.port: "<%= @port %>"
 #
 # For more information, consult the network module documentation.
 #
