--- a/elasticsearch/templates/elasticsearch.yml.erb
+++ b/elasticsearch/templates/elasticsearch.yml.erb
@@ -52,11 +52,11 @@
 #
 # Set the bind address to a specific IP (IPv4 or IPv6):
 #
- network.host: "<%= @host %>"
+ network.host: <%= @host %>
 #
 # Set a custom port for HTTP:
 #
- http.port: "<%= @port %>"
+ http.port: <%= @port %>
 #
 # For more information, consult the network module documentation.
 #
